Project Management View bugfixes
### 2022-05-10
 - Fixed last changelog date.
 - BUGFIX: Total line and word count were not aligned properly in Project Management View.
 - BUG: When deleting the final project in the list, somehow that project duplicated and was stored, resulting in exceptions on load.
 - Redesigned project, project group, and project manager serialization to ease validation and help loading outdated formats should that become an issue.
 - Added category to the project. Right now the available categories are None, Writing, and Worldbuilding.
 - BUGFIX: Newly-created file index projects have no files even when they have links (file wasn't updated to collect links until next time that file is updated)
 - BUGFIX: Word count was not updating for project while typing.

--- a/styles.css
+++ b/styles.css
@@ -318,11 +318,11 @@
 	background: inherit;
 }
 
-table.ws-pm-project-list-item-files > tbody > tr.ws-pm-file-item > td.ws-pm-file-item-name {
+table.ws-pm-project-list-item-files > :is(tbody,tfoot) > tr.ws-pm-file-item > td.ws-pm-file-item-name {
 	text-align: left;
 }
 
-table.ws-pm-project-list-item-files > tbody > tr.ws-pm-file-item > td.ws-pm-file-item-word-count {
+table.ws-pm-project-list-item-files > :is(tbody,tfoot) > tr.ws-pm-file-item > td.ws-pm-file-item-word-count {
 	text-align: right;
 }
 
